# gupikSimulation

./: .gitignore  .gitmodules
models (copy)/rovModel/: model.sdf
models/coralColony/: CMakeLists.txt  model.config  package.xml
models/coralColony/launch/: display.launch  gazebo.launch
models/coralColony/meshes/: base_link.STL
models/coralColony/urdf/: coralColony.csv  coralColony.urdf
models/coralColonyCut/: CMakeLists.txt  model.config  package.xml
models/coralColonyCut/launch/: display.launch  gazebo.launch
models/coralColonyCut/meshes/: base_link.STL  part10_Link.STL  part11_Link.STL  part12_Link.STL  part1_Link.STL  part2_Link.STL  part3_Link.STL  part4_Link.STL  part5_Link.STL  part6_Link.STL  part7_Link.STL  part8_Link.STL  part9_Link.STL
models/coralColonyCut/urdf/: coralColonyCut.csv  coralColonyCut.urdf
models/gupikModel/: CMakeLists.txt  model.config  package.xml
models/gupikModel/config/: gupikModel.yaml
models/gupikModel/launch/: display.launch  gazebo.launch
models/gupikModel/meshes/: base_link.STL  collision_v2.stl  gripper.STL  pednik_back.STL  pednik_bot_left.STL  pednik_bot_right.STL  pednik_front_left.STL  pednik_front_right.STL
models/gupikModel/urdf/: gupikModel.csv  gupikModel.urdf
models/rovModel/: model.config  model.sdf
models/rovModel/meshes/: obsolete.stl  rovModel.stl
models/trackBall/: model.config  model.sdf
nodes/: rosData.json
plugins/: protoCMakeLists.txt
plugins/gupikModel/: CMakeLists.txt
plugins/gupikModel/src/: gupikModel.cpp  gupikModel.h
plugins/mainCamera/: CMakeLists.txt
plugins/mainCamera/src/: mainCamera.cpp  mainCamera.h
plugins/rovModel/: CMakeLists.txt
plugins/rovModel/src/: rovModel.cpp  rovModel.h
plugins/trackBall/: CMakeLists.txt
plugins/trackBall/src/: trackBall.cpp  trackBall.h
plugins/world/: CMakeLists.txt
plugins/world/src/: world.cpp
world/: dupa.world  mate.world  test.world
